--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -38,7 +38,9 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="header">
             <a class="navbar-brand" th:href="@{/agentHome}"> E-money </a>
 
-            <a class="btn btn-secondary"> Logout </a>
+            <form th:action="@{/logout}" method="post"> 
+                <input type="submit" value="Logout"/> 
+            </form>
         </nav>
 
         <!-- Saving Model -->
