--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,7 +9,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet"
               th:href="@{/webjars/bootstrap/4.4.1/css/bootstrap.min.css}" />
-        
     </head>
     <body>
 
@@ -36,14 +35,25 @@
         </nav>
 
         <!-- Header Fragment -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="header">
-            <a class="navbar-brand" th:href="@{/agentHome}"> E-money </a>
-            
-            <form th:action="@{/logout}" method="post"> 
-                <input class="btn btn-danger" type="submit" value="Logout"/> 
-            </form>
-        </nav>
 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="header" >
+             <a class="navbar-brand" th:href="@{/agentHome}"> E-money </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
+                    </li>
+                    
+                </ul>
+                <form th:action="@{/logout}" method="post" class="">  
+                 <input class="btn btn-danger" type="submit" value="Logout"/> 
+             </form>
+            </div>
+        </nav>
         <!-- Saving Model -->
         <div class="modal fade" id="savingModal" tabindex="-1" role="dialog" 
              aria-labelledby="savingModalLabel" aria-hidden="true" th:fragment="savings">
