--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" 
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    
+
     <head th:replace="/fragments:: head">
-              
+
     </head>
-    
+
     <body>
-        
+
         <!-- Header -->
         <nav th:replace="/fragments :: header"></nav>
 
@@ -28,39 +28,14 @@
                         <th scope="col"> First Name </th>
                         <th scope="col"> Second Name </th>
                         <th scope="col"> Third Name </th>
+                        <th scope="col"> Phone Number </th>
                         <th scope="col">  </th>
                         <th scope="col">  </th>
                         <th scope="col">  </th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModel" data-whatever="@mdo"> Edit </button></td>
-                        <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#accountModal"> Account </button></td>
-                        <td><a class="btn btn-danger" th:href="@{#}"> Delete </a></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editModel" data-whatever="@mdo"> Edit </button></td>
-                        <td><a class="btn btn-primary" th:href="@{#}"> Account </a></td>
-                        <td><a class="btn btn-danger" th:href="@{#}"> Delete </a></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                        <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editModel" data-whatever="@mdo"> Edit </button></td>
-                        <td><a class="btn btn-primary" th:href="@{#}"> Account </a></td>
-                        <td><a class="btn btn-danger" th:href="@{#}"> Delete </a></td>
-                    </tr>
+                <tbody id="users">
+                   
                 </tbody>
             </table>
         </div>
